# termgrid-core

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  mkdocs.yml  rustfmt.toml  wrap_omit.patch
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml
LICENSES/: AGPL-3.0-or-later.txt  LicenseRef-VaranidWorks-Commercial-1.0.txt
docs/: architecture.md  index.md  invariants.md  non-goals.md  performance.md  rationale.md
docs/_legacy/: backend-authoring.md  index.md  non-goals.md  performance.md
docs/appendix/: AI_INTEGRATION_GUIDE.md  ANIMATION_COOKBOOK.md  MSRV_AND_DEPENDENCY_POLICY.md  comparison-stream-rendering.md  damage-model.md  glossary.md  replay-and-snapshots.md  unicode-model.md
docs/contracts/: rendering-model.md  style-model.md  wire-format-v1.md
docs/guides/: backend-integration.md  getting-started.md  writing-a-backend.md
docs/reference/: feature-flags.md  public-api.md  rustdoc.md
docs/stylesheets/: extra.css
examples/: fzf_results.rs  styled_label.rs  wrapped_paragraph.rs
scripts/: ci.sh  docs_build.sh  gen_lockfile.sh
src/: ansi.rs  damage.rs  grid.rs  lib.rs  ops.rs  registry.rs  render.rs  search.rs  style.rs  text.rs
testdata/: profile_example.json
tests/: bounds_regressions.rs  clip_ellipsis.rs  damage_tracking.rs  fuzzy_match.rs  golden_grid.rs  highlight.rs  measure.rs  proptest_invariants.rs  registry_example.rs  renderer_stability.rs  span.rs  style_invariants.rs  style_overlay.rs  unicode_nasties.rs  wire_format_v1.rs  wire_forward_compat.rs  wrap.rs
(+30 files in other folders)
